<resources>
    <string name="app_name">TKConfig</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_commands">No commands.</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading_wait">Loading&#8230;</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="date_format">MM.dd.yyyy</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="information">Information:</string>
    <string name="error_occurred">An error occurred:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="menu_back">Back</string>
    <string name="menu_license">License</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="menu_add">Add</string>
    <string name="app_theme_title">Application theme:</string>
    <string name="app_theme_title_param">Application theme: %s</string>
    <string name="app_theme_desc">Set the application theme: light or dark.</string>
    <string-array name="app_theme_labels">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="app_theme_values" translatable="false">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="must_restart_application">To apply changes the application will try to restart itself, if the changes are not applied please restart manually the application!</string>
    <string name="item_edit">Command: %s</string>
    <string-array name="menu_list">
        <item>Send SMS</item>
        <item>Duplicate</item>
        <item>Edit</item>
        <item>Edit ?params?</item>
        <item>Add</item>
        <item>Delete</item>
    </string-array>
    <string-array name="history_menu_list">
        <item>Resend SMS</item>
        <item>Delete</item>
    </string-array>
    <string-array name="contacts_menu_list">
        <item>Edit</item>
        <item>Add</item>
        <item>Delete</item>
    </string-array>
    <string name="add_command">Add Command</string>
    <string name="edit_command">Edit Command</string>
    <string name="command_name">Command name</string>
    <string name="command_the">The TK command</string>
    <string name="command_description">Command description</string>
    <string name="remove_command">Remove command</string>
    <string name="remove_command_question">Do you want to remove the command:\n\"%s\"?</string>
    <string name="no_params_to_edit">The command \"%s\" do not have parameters to be edited.</string>
    <string name="no_params_to_edit_just_password">The command \"%s\" do not have parameters to be edited.\nThe password parameter is editable when is defined the GPS phone number.</string>
    <string name="send_sms_title">Send SMS:</string>
    <string name="send_sms_question">\"%s\"\nContinue?</string>
    <string name="sms_prepare_title">Check SMS parameters:</string>
    <string name="sms_prepare_message">The SMS command contain following parameters:\n%s\nDo you want to modify them?</string>
    <string name="sms_no_contact">You have not selected any GPS contact to send the message!</string>
    <string name="sms_command_not_send">No command was send.</string>
    <string name="sms_command_send_one">A command was send.</string>
    <string name="sms_command_send_many">%s commands were send.</string>
    <string name="param_list_title">Parameters:</string>
    <string name="edit_parameter">Edit parameter:</string>
    <string name="edit_parameter_with_name">Edit parameter: \"%s\"</string>
    <string name="parameter">parameter</string>
    <string name="undefined">undefined</string>
    <string name="history">History</string>
    <string name="no_history">No History</string>
    <string name="date_time">Date time</string>
    <string name="phone_number">Phone number</string>
    <string name="sms_command">SMS command</string>
    <string name="remove_history">Remove command</string>
    <string name="remove_history_question">Do you want to remove the command:\n\"%s\"\nfrom the history list?</string>
    <string name="resend_command">Resend command</string>
    <string name="resend_command_question">Do you want to resend the command:\n\"%s\"?</string>
    <string name="resend_command_finish">The command was send again to the GPS.</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_question">Do you want to remove all commands recorder on the history list?</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_summary">Settings</string>
    <string name="general_settings">General settings</string>
    <string name="gps_contacts">GPS contacts list</string>
    <string name="gps_contacts_desc">See your GPS contact list</string>
    <string name="gps_phone_number">GPS phone number</string>
    <string name="gps_phone_number_details">Set your GPS tracker phone number.</string>
    <string name="gps_phone_number_default">0123456789</string>
    <string name="gps_password">GPS password</string>
    <string name="gps_password_details">Define your GPS password.</string>
    <string name="gps_password_default">123456</string>
    <string name="other_settings">Other settings</string>
    <string name="reset_commands">Reset commands</string>
    <string name="reset_commands_description">Reinitialize the whole command list.</string>
    <string name="reset_commands_question">Reset commands?</string>
    <string name="reset_commands_question_desc">Are you sure you want to reset all commands to the default state?</string>
    <string name="no_contacts">No GPS contacts defined.</string>
    <string name="gps_contacts_list">GPS contacts list</string>
    <string name="contact_name">GPS contact name</string>
    <string name="contact_phone">GPS phone number</string>
    <string name="contact_selected">Set this GPS contact selected</string>
    <string name="contact_editor_add">Add a new GPS contact</string>
    <string name="contact_editor_edit">Edit a GPS contact</string>
    <string name="remove_gps_contact_question">Do you want to remove the contact:\n\"%s\" from GPS contact list?</string>
    <string name="points">&#8230;</string>
    <string name="remove_contact">Remove contact</string>
    <string name="contact_item">Contact: %s</string>
    <string name="contacts_list">Contacts list</string>
    <string name="no_phone_contacts">You don\'t have contacts</string>
    <string name="contacts_loaded">Were loaded %d contacts</string>
    <string name="contact_image">[ ]</string>
    <string name="filter">Filter</string>
    <string name="filtering">Filtering&#8230;</string>
    <string name="backup_settings">Backup settings</string>
    <string name="backup">Backup</string>
    <string name="backup_desc">Backup application settings</string>
    <string name="restore">Restore</string>
    <string name="restore_desc">Restore application settings</string>
    <string name="default_backup_dir">/mnt/sdcard/</string>
    <string name="default_backup_file">tkconfig.prefs</string>
    <string name="file_name_missing">You have not specified a file name for the operation!</string>
    <string name="backup_started">Preferences backup started!</string>
    <string name="backup_success">Successfully backing to: %s!</string>
    <string name="backup_exception">Exception occurred during backup: %1$s\nException: %2$s\nMessage: %3$s</string>
    <string name="create_folders_error">Cannot create parent folders: %s</string>
    <string name="restore_file_not_exist">Restore file: %s don\'t exist!\nCreate it first!</string>
    <string name="restore_started">Preferences restored started!</string>
    <string name="restore_success">Successfully restored from: %s!\nYou should restart the application to use restored values.</string>
    <string name="restore_exception">Exception occurred during restore:  %1$s Exception: %2$s Message: %3$s</string>
    <string name="request_permissions_title">Request required application permission.</string>
    <string name="request_permissions_desc">Touch this option to request for required application permissions: Read, Send and Write SMS, Contacts (used to get a phone number from your contacts), Storage (for the backup support).</string>
    <string name="request_permissions_confirmation">Do you want to request for required application permissions?</string>
    <string name="request_permissions_ok">All required permissions are granted!</string>
    <string name="no_permissions_send_sms">Send SMS permission is not granted! You must grant this permission to send SMS commands.</string>
    <string name="donate_title">Donation confirmation</string>
    <string name="donate_message">If you appreciate this application, please do a donation buying TKConfig PRO!\nPressing YES button, you will be sent to TKConfig PRO from Google Play Store.\nThank you for using this application!</string>
    <string name="donate_url"><Data><![CDATA[https://play.google.com/store/apps/details?id=ro.ciubex.tkconfigpro]]></Data></string>
    <string name="about">About</string>
</resources>