<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:summary="@string/settings_summary"
    android:title="@string/settings_title" >

    <PreferenceCategory android:title="@string/general_settings" android:key="generalSettings">
        <ListPreference
            android:defaultValue="dark"
            android:entries="@array/app_theme_labels"
            android:entryValues="@array/app_theme_values"
            android:key="appTheme"
            android:summary="@string/app_theme_desc"
            android:title="@string/app_theme_title"/>
        <Preference
            android:key="gpsContacts"
            android:persistent="false"
            android:summary="@string/gps_contacts_desc"
            android:title="@string/gps_contacts" />
        <Preference
            android:key="requestPermissions"
            android:persistent="false"
            android:summary="@string/request_permissions_desc"
            android:title="@string/request_permissions_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings" >
        <ro.ciubex.tkconfig.forms.CustomEditTextPreference
            android:defaultValue="@string/default_backup_file"
            android:key="preferencesBackup"
            android:persistent="false"
            android:summary="@string/backup_desc"
            android:title="@string/backup" />
        <ro.ciubex.tkconfig.forms.CustomEditTextPreference
            android:defaultValue="@string/default_backup_file"
            android:key="preferencesRestore"
            android:persistent="false"
            android:summary="@string/restore_desc"
            android:title="@string/restore" />

        <Preference
            android:key="resetCommands"
            android:persistent="false"
            android:summary="@string/reset_commands_description"
            android:title="@string/reset_commands" />
    </PreferenceCategory>

</PreferenceScreen>