<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name"
        android:inputType="text"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_phone"
        android:inputType="text|number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/contact_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gps_password"
        android:inputType="text|number"
        android:singleLine="true" />

    <CheckBox
        android:id="@+id/contact_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_selected" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_ok"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>